# vannotplus

./: .gitignore  Makefile  README.md  output.vcf  setup.cfg
src/PACKAGENAME/: __main__.py
src/vannotplus/: __main__.py  barcode.py  commons.py  config.py  config.yml  ped9.py  score.py
src/vannotplus/annot/: alfa.py  gmc.py  phastcons.py  score.py  splicing.py
src/vannotplus/exomiser/: exomiser.py  template.json
src/vannotplus/family/: barcode.py  ped9.py
src/vannotplus/howard/: database.py  howard.py
tests/: test_barcode.py  test_exomiser.py  test_gmc.py
tests/controls/: exomiser.vcf  filtered_gmc_control.vcf  gmc_mini_control.vcf  test_family_barcoded.vcf  test_pools_barcoded.vcf
tests/data/: FAKE_APP.json  config.yml  exomiser.vcf  filtered_gmc_input.vcf  gmc_mini_input.vcf  test_family.vcf  test_pools.vcf
