[metadata]
name = PACKAGENAME
version = attr: PACKAGENAME.__version__
description = 
long_description = file: README.md
long_description_content_type = text/markdown
author = AUTHORNAME
url = https://github.com/AUTHORNAME/REPONAME.git

license_files = LICENSE
keywords = bioinformatics, genetics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Affero General Public License v3

[options.package_data]
* = *.yaml, *.json


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.10
install_requires =

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    pytest

[options.entry_points]
console_scripts =
    PACKAGENAME = PACKAGENAME.__main__:main
